--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "langchain": "^1.2.24",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "cross-env": "^10.1.0"
   }
 }
