--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node src/server.js"
   },
   "dependencies": {
+    "@google-cloud/translate": "^9.3.0",
     "@langchain/google-genai": "^2.1.18",
     "@langchain/openai": "^1.2.7",
     "cors": "^2.8.5",
